--- a/Todo/pom.xml
+++ b/Todo/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>mysql-connector-j</artifactId>
             <version>8.1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.6.1.Final</version>
+        </dependency>
     </dependencies>
 
     <build>
