PathVariable y Metodo GET

--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>primerspring</artifactId>
+	<artifactId>blog</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>primerspring</name>
-	<description>Demo project for Spring Boot</description>
+	<name>blog</name>
+	<description>Project Blog</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
@@ -53,6 +53,9 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<image>
+						<builder>paketobuildpacks/builder-jammy-base:latest</builder>
+					</image>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
