--- a/blog/src/main/resources/application.properties
+++ b/blog/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.address=0.0.0.0
 server.port=9000
 # database
 # spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/primerspring?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/blog?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -15,4 +15,3 @@ spring.jpa.hibernate.ddl-auto=update
 spring.thymeleaf.cache=false
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-
