--- a/peliculon/pom.xml
+++ b/peliculon/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>peliculon</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>peliculon</name>
-	<description>Las Peleas</description>
+	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
@@ -45,13 +45,13 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 		<!-- https://mvnrepository.com/artifact/com.github.javafaker/javafaker -->
 		<dependency>
 			<groupId>com.github.javafaker</groupId>
 			<artifactId>javafaker</artifactId>
 			<version>1.0.2</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
